clickable links added

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,4 +1,4 @@
 [theme]
-backgroundColor="#dffffa"
+backgroundColor="#fae0c3"
 secondaryBackgroundColor="#b5bbf9"
-textColor="#000000"
+textColor="#121211"
